--- a/SpaceShooter/index.html
+++ b/SpaceShooter/index.html
@@ -21,7 +21,8 @@
     <script src="Scripts/lib/preloadjs-0.4.1.min.js"></script>
 
     <!-- Game Files -->
-
+    <script src="Scripts/Constants.js"></script>
     <script src="Scripts/game.js"></script>
+    <script src="Scripts/State.js"></script>
 </body>
 </html>
